--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,39 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<!-- Jib -->
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<configuration>
+					<from>
+						<image>registry.cn-hangzhou.aliyuncs.com/charlezone/oracle_java8:v1</image>
+					</from>
+					<to>
+						<image>registry.cn-hangzhou.aliyuncs.com/charlezone/tmall:v2</image>
+					</to>
+					<container>
+						<appRoot>/usr/local/tomcat/webapps/ROOT</appRoot>
+					</container>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
